syntax = "proto3";

option csharp_namespace = "Heatray.Api.Protos";

package MessageProcessor;
import "google/api/annotations.proto";

service MessageProcessor {
  rpc ProcessMessage (MessageProcessorRequest) returns (MessageProcessorReply) {
	  option (google.api.http) = {
      get: "/message-processor/{message}"
    };
  }
}

message MessageProcessorRequest {
  string message = 1;
}

message MessageProcessorReply {
  string message = 1;
}
